# SkimLit-Improved

./: README.md  pyproject.toml  requirements.txt  test.py
experiments/: experimentation.py
