[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SkimLit-improved"
version = "0.1.0"
description = "Improving upon a paper's attempt to classify abstracts into objective, background, methods, results and conclusion sentences."
authors = [{name = "Katie Riley", email = "email@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.0",
    "scikit-learn>=1.0",
    "seaborn>=0.10",
    "tensorflow>=2.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/SmileyRileyCodes/SkimLit-Improved"
Repository = "https://github.com/SmileyRileyCodes/SkimLit-Improved.git"